SystemUI: Implement weather on lockscreen
This use OmniJaws implementations as base, very thanks to Omni team

Icons extracted from Lawnchair, thanks to deletescape and paphonb

Our edits:

* Cleanup code
* Adapt to our weather provider
* Slice-ify
* Add required permissions

Change-Id: I05c3d109edb9c38ad11e14dfc17f4dd06a9bcb1d
Signed-off-by: Henrique Silva <jhenrique09.mcz@hotmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -251,6 +251,9 @@
     <!-- screenrecord -->
     <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
 
+    <!-- Weather on lockscreen -->
+    <uses-permission android:name="com.android.providers.weather.READ_WEATHER" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
